<resources>
    <string name="app_name">Navegacao</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuário</string>
    <string name="nav_header_subtitle">usuario@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">Sobre</string>

    <!-- MENU LATERAL DRAWER-->
    <string name="menu_home">Home</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_exit">Exit</string>

    <!-- CADASTRO -->
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="ocupacao">Ocupação</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="atualizar">Atualizar</string>

    <!-- ITENS GERAIS -->
    <string name="filter">Organizar</string>
    <string name="content">User Image</string>
    <string name="login">Login</string>
    <string name="forget">Esqueceu a senha? Clique aqui para recuperar</string>
    <string name="inserir">Cadastrar usuário</string>
    <string name="cadastroUsuario">Criar usuário</string>
    <string name="exit">Encerrar sessão</string>

    <!-- PREFERENCES -->
    <string name="configApp">Configurações do App</string>
    <string name="receberEmail">Receber alerta por e-mail</string>
    <string name="modoNoturno">Modo noturno</string>
    <string name="logado">Clique para manter usuário logado</string>
    <string name="configSalvas">Configurações salvas</string>

</resources>
