<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/addNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="50"
        android:inputType="textPersonName"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/addIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/idade" />

    <EditText
        android:id="@+id/addOcupacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:hint="@string/ocupacao" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/addUsuario"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/seletor_ok"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/cadastrar"/>
        <Button
            android:id="@+id/botaoCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/seletor_cancelar"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/cancelar"/>
    </LinearLayout>
</LinearLayout>
