<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="10dp">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/usuario"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:maxLength="20"
            android:inputType="text"/>

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/senha"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:maxLength="4"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:layout_marginTop="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:maxLength="20"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:maxLength="50"
            android:inputType="textEmailAddress"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/botaoCadastrarUsuario"
                    android:textColor="@android:color/white"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastrar"
                    android:background="@drawable/seletor_ok"/>
                <Button
                    android:id="@+id/botaoCancelarCadastro"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:background="@drawable/seletor_cancelar"/>
        </LinearLayout>
</LinearLayout>