<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="10dp">


    <EditText
        android:id="@+id/atualizaNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:backgroundTint="@color/editTextBack"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/atualizaIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:backgroundTint="@color/editTextBack"
        android:hint="@string/idade" />

    <EditText
        android:id="@+id/atualizaOcupacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:backgroundTint="@color/editTextBack"
        android:hint="@string/ocupacao" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/botaoAtualizar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/seletor_ok"
            android:textColor="@android:color/white"
            android:text="@string/atualizar"/>
        <Button
            android:id="@+id/botaoCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/seletor_cancelar"
            android:textColor="@android:color/white"
            android:text="@string/cancelar"/>

    </LinearLayout>
</LinearLayout>
