<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:id="@+id/card_view"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="5dp"
	card_view:cardCornerRadius="2dp"
	card_view:cardElevation="2dp"
	card_view:contentPadding="2dp"
	android:foreground="?attr/selectableItemBackground"
	android:layout_marginBottom="10dp"
	android:background="@color/cardBackground">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/nome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nome"
			android:textColor="@color/textColor"
			android:textSize="18sp" />
		<TextView
			android:id="@+id/idade"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/idade"
			android:textColor="@color/textColor"
			android:textSize="18sp" />
		<TextView
			android:id="@+id/ocupacao"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ocupacao"
			android:textColor="@color/textColor"
			android:textSize="18sp" />
	</LinearLayout>
</androidx.cardview.widget.CardView>