<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <!--Image-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/content"
            android:layout_gravity="center"
            android:src="@drawable/image"/>
    </FrameLayout>


        <EditText
            android:id="@+id/user"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:hint="@string/usuario"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:backgroundTint="@color/editTextBack"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:backgroundTint="@color/editTextBack"
            android:maxLength="4"/>

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:background="@drawable/seletor"
            android:text="@string/login"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/textColor"
            android:background="@color/checkbox"
            android:text="@string/logado" />

<!--        <TextView-->
<!--            android:id="@+id/forget"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="70dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:textColor="@color/colorAccent"-->
<!--            android:text="@string/forget"/>-->

    </FrameLayout>
</LinearLayout>